# sicilia

./: pyproject.toml
catalog/: admin.py  models.py
catalog/management/commands/: generate_dish_data.py
catalog/migrations/: 0001_initial.py  0002_category_alter_dish_options_alter_dish_image_and_more.py  0003_alter_category_order.py  0004_alter_category_options_dish_is_available_and_more.py  0005_alter_dish_description.py
config/: settings.py  urls.py
static/css/: _reset.css  _vars.css  style.css
static/css/components/: _header.css
templates/: base.html  index.html  login.html  register.html
templates/components/: _header.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
