[project]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = [
    {name = "XeindsTwo",email = "yourihelo1971@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
